--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "scripts": {
+    "prepublish": "rm -r dist; tsc",
     "test": "jest",
     "build": "tsc"
   }
