--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   "scripts": {
     "prepublish": "rm -rf dist; tsc",
     "test": "jest",
-    "build": "tsc"
+    "build": "rm -rf dist; tsc"
   }
 }
