--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,11 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "dist", "src/**/*.test.ts"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "jest.config.ts"
+  ]
 }
